fixed spacing problem

--- a/hotel-management/src/components/ManagerDashboard.css
+++ b/hotel-management/src/components/ManagerDashboard.css
@@ -39,7 +39,7 @@ row-gap: 20px;
 }
 .overview-desc{
     font-size: 1.4rem;
-    width: 100px;
+    width: 120px;
 
 
 }
